# kumo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  books.json  lefthook.yml  quotes.jsonl
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
benchmark/: README.md  docker-compose.yml  run.sh
benchmark/colly/: Dockerfile  go.mod  main.go
benchmark/kumo/: Cargo.toml  Dockerfile
benchmark/kumo/src/: main.rs
benchmark/mockserver/: Dockerfile  generate.py  nginx.conf
benchmark/results/: colly.jsonl  colly_run1_stats.json  colly_run2_stats.json  colly_run3_stats.json  colly_stats.json  kumo.jsonl  kumo_run1_stats.json  kumo_run2_stats.json  kumo_run3_stats.json  kumo_stats.json  latest.json  latest_local.json  scrapy.jsonl  scrapy_run1_stats.json  scrapy_run2_stats.json  scrapy_run3_stats.json  scrapy_stats.json
benchmark/results/scale/: colly_c128_stats.json  colly_c16_stats.json  colly_c32_stats.json  colly_c64_stats.json  kumo_c128_stats.json  kumo_c16_stats.json  kumo_c32_stats.json  kumo_c64_stats.json  scrapy_c128_stats.json  scrapy_c16_stats.json  scrapy_c32_stats.json  scrapy_c64_stats.json
benchmark/scrapy/: Dockerfile  requirements.txt  scrapy.cfg
benchmark/scrapy/benchmark_spider/: pipelines.py  settings.py
benchmark/scrapy/benchmark_spider/spiders/: books.py
docs/: FUTURE_FEATURES.md  mkdocs.yml  pyproject.toml
docs/src/: 404.md  CNAME  changelog.md  derive.md  examples.md  extractors.md  feature-flags.md  frontier.md  getting-started.md  index.md  middleware.md  pipelines.md  spiders.md  stores.md
docs/src/advanced/: browser.md  http-cache.md  link-extractor.md  otel.md  performance.md  sitemap.md  stealth.md  stream.md
examples/: README.md  autothrottle.rs  books.rs  books_derive.rs  browser.rs  cloud.rs  http_cache.rs  link_extractor.rs  llm_extract.rs  llm_fallback.rs  multi_spider.rs  news.rs  postgres.rs  proxy_rotation.rs  quotes.rs  selectors.rs  sqlite.rs  stealth.rs  xpath.rs
kumo-derive/: CHANGELOG.md  Cargo.toml  README.md
kumo-derive/src/: lib.rs
src/: engine.rs  error.rs  lib.rs  otel.rs  retry.rs  robots.rs  sitemap.rs  spider.rs
src/extract/: extract_trait.rs  extractor.rs  link_extractor.rs  mod.rs  response.rs  selector.rs
src/fetch/: browser.rs  cache.rs  http.rs  mock.rs  mod.rs  stealth_http.rs  stealth_patches.js
src/frontier/: file.rs  memory.rs  mod.rs  redis_frontier.rs
src/llm/: anthropic.rs  client.rs  gemini.rs  mod.rs  models.rs  ollama.rs  openai.rs  prompt.rs  shared.rs
src/middleware/: autothrottle.rs  default_headers.rs  mod.rs  proxy.rs  rate_limit.rs  status_retry.rs  user_agent.rs
src/pipeline/: dedup.rs  filter.rs  mod.rs
src/store/: cloud.rs  csv.rs  json.rs  jsonl.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs  stdout.rs
tests/: derive_macro.rs  integration.rs  redis_frontier.rs
tests/derive/fail/: enum_not_supported.rs  enum_not_supported.stderr  missing_css.rs  missing_css.stderr  missing_extract_attr.rs  missing_extract_attr.stderr  unknown_key.rs  unknown_key.stderr  unknown_transform.rs  unknown_transform.stderr
tests/derive/pass/: basic.rs  default_transform.rs  llm_fallback.rs  regex.rs
