[package]
name = "kumo"
version = "0.1.0"
edition = "2024"
description = "An async web crawling framework for Rust — Scrapy for Rust"
license = "MIT"
repository = "https://github.com/wihlarkop/kumo"
homepage = "https://github.com/wihlarkop/kumo"
readme = "README.md"
keywords = ["web", "crawling", "scraping", "spider", "async"]
categories = ["web-programming", "asynchronous"]

[features]
default = []
postgres = ["dep:sqlx", "sqlx/postgres"]
sqlite = ["dep:sqlx", "sqlx/sqlite"]
mysql = ["dep:sqlx", "sqlx/mysql"]
llm = ["dep:schemars", "dep:rig-core"]
claude = ["llm"]
openai = ["llm"]
gemini = ["llm"]
ollama = ["llm"]
jsonpath = ["dep:jsonpath-rust"]

[dependencies]
async-trait = "0.1.89"
bloomfilter = "3.0.1"
governor = "0.10.4"
jsonpath-rust = { version = "1.0.4", optional = true }
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json", "cookies"] }
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
schemars = { version = "1.2.1", optional = true, features = ["derive"] }
rig-core = { version = "0.35.0", optional = true }
sqlx = { version = "0.8.6", optional = true, features = [
  "runtime-tokio-rustls",
  "json",
] }
texting_robots = "0.2.2"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"

[dev-dependencies]
mockito = "1.7.2"

[[example]]
name = "postgres"
required-features = ["postgres"]

[[example]]
name = "sqlite"
required-features = ["sqlite"]

[[example]]
name = "llm_extract"
required-features = ["claude"]
