[package]
name = "kumo-benchmark"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "kumo-benchmark"
path = "src/main.rs"

[dependencies]
kumo = { path = "../.." }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
